logs/blueberrypy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CherryPy-13.1.0.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/blueberrypy'...
Compiling './lib/python3.5/site-packages/blueberrypy/command.py'...
***   File "./lib/python3.5/site-packages/blueberrypy/command.py", line 127
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blueberrypy/console.py'...
***   File "./lib/python3.5/site-packages/blueberrypy/console.py", line 14
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blueberrypy/email.py'...
***   File "./lib/python3.5/site-packages/blueberrypy/email.py", line 78
    except smtplib.SMTPHeloError, e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blueberrypy/plugins.py'...
***   File "./lib/python3.5/site-packages/blueberrypy/plugins.py", line 108
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blueberrypy/project_template'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/.cache'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/config'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/config/dev'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/config/prod'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/log'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/src'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/src/+package+'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/src/+package+/templates'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/src/tests'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/static'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/static/css'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/static/img'...
Listing './lib/python3.5/site-packages/blueberrypy/project_template/static/js'...
Compiling './lib/python3.5/site-packages/blueberrypy/tools.py'...
***   File "./lib/python3.5/site-packages/blueberrypy/tools.py", line 149
    except SQLAlchemyError, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/blueberrypy-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/cheroot'...
Listing './lib/python3.5/site-packages/cheroot/ssl'...
Listing './lib/python3.5/site-packages/cheroot/test'...
Listing './lib/python3.5/site-packages/cheroot/workers'...
Listing './lib/python3.5/site-packages/cheroot-6.0.0.dist-info'...
Listing './lib/python3.5/site-packages/cherrypy'...
Listing './lib/python3.5/site-packages/cherrypy/lib'...
Listing './lib/python3.5/site-packages/cherrypy/process'...
Listing './lib/python3.5/site-packages/cherrypy/scaffold'...
Listing './lib/python3.5/site-packages/cherrypy/scaffold/static'...
Listing './lib/python3.5/site-packages/cherrypy/test'...
Listing './lib/python3.5/site-packages/cherrypy/test/static'...
Listing './lib/python3.5/site-packages/cherrypy/tutorial'...
Listing './lib/python3.5/site-packages/dateutil'...
Compiling './lib/python3.5/site-packages/dateutil/easter.py'...
***   File "./lib/python3.5/site-packages/dateutil/easter.py", line 55
    raise ValueError, "invalid method"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/parser.py'...
***   File "./lib/python3.5/site-packages/dateutil/parser.py", line 158
    l.append("%s=%s" % (attr, `value`))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/relativedelta.py'...
***   File "./lib/python3.5/site-packages/dateutil/relativedelta.py", line 118
    raise TypeError, "relativedelta only diffs datetime/date"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/rrule.py'...
***   File "./lib/python3.5/site-packages/dateutil/rrule.py", line 55
    raise ValueError, "Can't create weekday with n == 0"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dateutil/tz.py'...
***   File "./lib/python3.5/site-packages/dateutil/tz.py", line 78
    `self._name`,
    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/more_itertools'...
Listing './lib/python3.5/site-packages/more_itertools/tests'...
Listing './lib/python3.5/site-packages/more_itertools-4.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/portend-2.2.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-1.5.egg-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tempora'...
Listing './lib/python3.5/site-packages/tempora/tests'...
Listing './lib/python3.5/site-packages/tempora-1.10.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
